# Greibach-Grammar-Inference

./: CMakeLists.txt  README.md  RunExperiments.py
Datasets/L1/: negative.txt  positive.txt
Datasets/L10/: negative.txt  positive.txt
Datasets/L2/: negative.txt  positive.txt
Datasets/L3/: negative.txt  positive.txt
Datasets/L4/: negative.txt  positive.txt
Datasets/L5/: negative.txt  positive.txt
Datasets/L6/: negative.txt  positive.txt
Datasets/L7/: negative.txt  positive.txt
Datasets/L8/: negative.txt  positive.txt
Datasets/L9/: negative.txt  positive.txt
GeneticInference/: geneticalgorithm.cpp  geneticalgorithm.h  greibachchromosome.cpp  greibachchromosome.h  population.cpp  population.h
MainProgram/: main.cpp
Utilities/: algovars.h  database.cpp  database.h  tsymbolsmap.cpp  tsymbolsmap.h
